tests/golden/err-inline-tab/expected_error.txt
error: タブは使えません
 --> main.clum:4:17
  |
4 |     h .div class	'container'
  |                 ^
